# cslibs_laser_processing

./: .gitlab-ci.yml  CMakeLists.txt  package.xml
include/cslibs_laser_processing/common/: ptr_vector.hpp  yaml-io.hpp
include/cslibs_laser_processing/data/: labeled_scan.h  laser_beam.h  scan.h  segment.h
include/cslibs_laser_processing/person_filter/: leg_detector.h  person.h  person_detector.h  person_filter.h
include/cslibs_laser_processing/segmentation/: circle_fit.hpp  distance_segmentation.h  line_fit.h  line_fit_lsq.h  lsq.hpp  p2pdistance.h  p2pdistance_expand.h  p2pline.h  peak_finder.hpp  random_generator.hpp  segment_length.h  segmentation.h  utils.hpp
include/utils_laser_processing/: laser_beam.h
include/utils_laser_processing/common/: vector.hpp  yaml-io.hpp
include/utils_laser_processing/data/: labeled_scan.h  laser_beam.h  scan.h  segment.h
include/utils_laser_processing/person_filter/: leg_detector.h  person.h  person_detector.h  person_filter.h
include/utils_laser_processing/segmentation/: circle_fit.hpp  distance_segmentation.h  ellipsoid.h  fit_ellipse.hpp  line_fit.h  line_fit_lsq.h  lsq.hpp  p2pdistance.h  p2pdistance_expand.h  p2pline.h  segment.h  segment_length.h  segmentation.h  utils.hpp
src/data/: labeled_scan.cpp  laser_beam.cpp  scan.cpp  segment.cpp
src/person_filter/: leg_detector.cpp  person_detector.cpp  person_filter.cpp
src/segmentation/: distance_segmentation.cpp  ellipsoid.cpp  line_fit.cpp  line_fit_lsq.cpp  p2pdistance.cpp  p2pdistance_expand.cpp  p2pline.cpp  segment.cpp  segment_length.cpp  segmentation.cpp
