<?xml version="1.0"?>
<package>
  <name>utils_laser_processing</name>
  <version>0.0.1</version>
  <description>The utils_laser_processing package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
</package>
