<?xml version="1.0"?>
<package>
  <name>cslibs_laser_processing</name>
  <version>0.0.1</version>
  <description>This package contains ROS independent classes for 2d scan processing.</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
